--- a/Venam/assets/css/style.css
+++ b/Venam/assets/css/style.css
@@ -45,7 +45,7 @@ select {
     width: 110px;
 }
 
-.header-bottom{
+.header-bottom {
     background-color: #0465D2;
     color: white;
     font-size: 14px;
@@ -53,28 +53,33 @@ select {
     letter-spacing: .5px;
 }
 
-@media(max-width:1200px){
-    .header-bottom .all-categories{
+.header-bottom-right {
+    padding: 0px;
+    margin-right: 12px;
+}
+
+@media(max-width:1200px) {
+    .header-bottom .all-categories {
         width: fit-content;
     }
 }
 
-.header-bottom .all-categories{
+.header-bottom .all-categories {
     background-color: #025BBF;
     cursor: pointer;
 }
 
-.header-bottom-right .mega-menu-button{
+.header-bottom-right .mega-menu-button {
     width: fit-content;
     position: relative;
     cursor: pointer;
 }
 
-.header-bottom-right .home::after{
+.header-bottom-right .home::after {
     opacity: 1 !important;
 }
 
-.header-bottom-right .mega-menu-button::after{
+.header-bottom-right .mega-menu-button::after {
     content: '';
     position: absolute;
     background-color: #F4BA05;
@@ -87,15 +92,360 @@ select {
     transition: .3s;
 }
 
-.header-bottom-right .mega-menu-button:hover::after{
+.header-bottom-right .mega-menu-button:hover::after {
     opacity: 1;
 }
 
-.header-bottom-right .contact::after{
+.header-bottom-right .contact::after {
     width: 75% !important;
     left: 13% !important;
 }
 
-.header-bottom .responsive-menu i{
+.header-bottom .responsive-menu i {
     font-size: 35px;
+}
+
+.all-categories {
+    position: relative;
+}
+
+.all-categories-menu {
+    background-color: white;
+    color: #656565;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    font-weight: 400;
+    height: 0px;
+    overflow: hidden;
+    transition: .4s;
+}
+
+.all-categories-menu .list {
+    position: relative;
+}
+
+.all-categories-menu .list-item {
+    transition: .3s;
+}
+
+.all-categories-menu .list-item:hover {
+    background-color: #EEEEEE;
+    color: #0465D2;
+    outline: #e7e1e1 1px solid;
+}
+
+.all-categories-menu .list-item i {
+    font-size: 8px;
+}
+
+.all-categories-menu .mega-menu {
+    background-color: white;
+    position: absolute;
+    width: 708px;
+    overflow: hidden;
+    height: 0px;
+    top: 2px;
+    left: 211px;
+    transition: .4s;
+}
+
+.all-categories-menu .mega-menu h6 {
+    color: black;
+}
+
+.all-categories-menu .mega-menu p {
+    color: #656565;
+    font-size: 13px;
+}
+
+.home {
+    position: relative;
+}
+
+.home-menu {
+    background-color: white;
+    color: #656565;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 217px;
+    font-weight: 400;
+    height: 0px;
+    overflow: hidden;
+    transition: .4s;
+    font-size: 13px;
+}
+
+.home-menu .list-item {
+    transition: .3s;
+}
+
+.home-menu .list-item:hover {
+    color: #0465D2;
+}
+
+.categories-menu {
+    background-color: white;
+    width: 900px;
+    height: 0px;
+    overflow: hidden;
+    visibility: hidden;
+    position: absolute;
+    top: 70px;
+    z-index: 2;
+    transition: .4s;
+}
+
+.categories-menu p {
+    color: #656565;
+    font-size: 13px;
+}
+
+.categories-menu h6 {
+    color: black;
+}
+
+.categories-menu img {
+    height: 600px;
+    object-fit: contain;
+    padding-top: 10px;
+}
+
+.shop-menu {
+    background-color: white;
+    width: 900px;
+    height: 0px;
+    overflow: hidden;
+    visibility: hidden;
+    position: absolute;
+    top: 70px;
+    z-index: 2;
+    transition: .4s;
+}
+
+.shop-menu p {
+    color: #656565;
+    font-size: 13px;
+}
+
+.shop-menu h6 {
+    color: black;
+}
+
+.pages {
+    position: relative;
+}
+
+.page-menu {
+    background-color: white;
+    color: #656565;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 217px;
+    font-weight: 400;
+    height: 0px;
+    overflow: hidden;
+    transition: .4s;
+    font-size: 13px;
+}
+
+.page-menu .list-item {
+    transition: .3s;
+}
+
+.page-menu .list-item:hover {
+    color: #0465D2;
+}
+
+.store {
+    position: relative;
+}
+
+.store-menu {
+    background-color: white;
+    color: #656565;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 217px;
+    font-weight: 400;
+    height: 0px;
+    overflow: hidden;
+    transition: .4s;
+    font-size: 13px;
+}
+
+.store-menu .list-item {
+    transition: .3s;
+}
+
+.store-menu .list-item:hover {
+    color: #0465D2;
+}
+
+.special {
+    position: relative;
+}
+
+.special-menu {
+    background-color: white;
+    color: #656565;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 217px;
+    font-weight: 400;
+    height: 0px;
+    overflow: hidden;
+    transition: .4s;
+    font-size: 13px;
+}
+
+.special-menu .list-item {
+    transition: .3s;
+}
+
+.special-menu .list-item:hover {
+    color: #0465D2;
+}
+
+main {
+    height: 100vh;
+}
+
+#to-top-btn {
+    background-color: #F4BA05;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 11px;
+    border-radius: 5px;
+    position: fixed;
+    right: 40px;
+    bottom: 30px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+#to-top-btn:hover {
+    color: #0465D2;
+}
+
+footer .offer {
+    background-image: url(https://ninetheme.com/themes/venam/v1/wp-content/uploads/2021/05/limited_offer_bg.jpg);
+}
+
+footer .offer .left {
+    width: 543px;
+}
+
+footer .offer .right {
+    width: 443px;
+    height: 92px;
+}
+
+footer .offer h6 {
+    color: #FF6000;
+}
+
+footer .offer h1 {
+    color: #fff;
+}
+
+footer .offer a {
+    background-color: #fff;
+    color: #FF6000;
+    padding: 10px 35px;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    transition: .3s;
+}
+
+footer .offer a:hover {
+    background-color: #FF6000;
+    color: #fff;
+}
+
+footer .offer .upto {
+    display: inline-block;
+    color: #FF6000;
+    transform: rotate(-90deg);
+}
+
+footer .offer .price {
+    background-color: #FF6000;
+    color: white;
+    font-weight: 700;
+    padding: 8px 20px;
+    font-size: 25px;
+}
+
+footer .offer .off {
+    color: #fff;
+    font-weight: 600;
+}
+
+footer .subscribe input {
+    outline: none;
+    width: 60%;
+    border: transparent solid 1px;
+    border-radius: 4px 0px 0px 4px;
+    padding: 0px 15px;
+    font-size: 13px;
+    color: #656565;
+    height: 100%;
+}
+
+footer .subscribe .button {
+    width: 30%;
+    background-color: #F7BA01;
+    color: #22252A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    height: 100%;
+    font-weight: 600;
+    transition: .3s;
+}
+
+footer .subscribe .button:hover{
+    background-color: #22252A;
+    color: white;
+}
+
+footer .subscribe .right {
+    height: 50px;
+    width: 575px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .subscribe .left p{
+    color: #656565;
+}
+
+footer .find-out .main,
+footer .find-out .links{
+    color: #656565;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+footer .find-out span{
+    color: #e7e1e1;
+    font-weight: 100;
+    font-size: 20px;
+}
+
+footer .main-footer p{
+    color: #656565;
+    font-weight: 400;
+    font-size: 14px;
 }
