--- a/Venam/assets/css/style.css
+++ b/Venam/assets/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    scroll-behavior: smooth;
+}
+
 @media (max-width:768px) {
     body{
         margin-bottom: 60px;
@@ -51,6 +55,10 @@ select {
     width: 110px;
 }
 
+.header-mid .links a:hover{
+    color: initial;
+}
+
 .header-bottom {
     background-color: #0465D2;
     color: white;
@@ -79,6 +87,10 @@ select {
     width: fit-content;
     position: relative;
     cursor: pointer;
+}
+
+.header-bottom-right .mega-menu-button a:hover{
+    color: inherit;
 }
 
 .header-bottom-right .home::after {
@@ -161,6 +173,10 @@ select {
     color: black;
 }
 
+.all-categories-menu .mega-menu h6 a:hover{
+    color: initial;
+}
+
 .all-categories-menu .mega-menu p {
     color: #656565;
     font-size: 13px;
@@ -219,6 +235,10 @@ select {
     padding-top: 10px;
 }
 
+.categories-menu p a:hover{
+    color: #0465D2 !important;
+}
+
 .shop-menu {
     background-color: white;
     width: 900px;
@@ -234,6 +254,10 @@ select {
 .shop-menu p {
     color: #656565;
     font-size: 13px;
+}
+
+.shop-menu p a:hover{
+    color: #0465D2 !important;
 }
 
 .shop-menu h6 {
