header-scroll-top

--- a/Venam/assets/css/cart.css
+++ b/Venam/assets/css/cart.css
@@ -1,9 +1,9 @@
-.cart-main .table-empty{
+.cart-main .table-empty {
     color: #656565;
     border-top: 3px solid #FF6000;
 }
 
-.cart-main .table-empty i{
+.cart-main .table-empty i {
     color: #FF6000;
     padding-right: 5px;
 }
@@ -17,19 +17,68 @@
     transition: .3s;
 }
 
-.return a:hover{
+.return a:hover {
     background-color: #22252A;
     color: white;
 }
 
-.items-purchased>h2{
+.items-purchased>h2 {
     font-size: 23px;
 }
 
-.items-purchased .categories span{
+.items-purchased .categories span {
     color: #8e8d8d;
     font-size: 14px;
     font-weight: 500;
     padding-right: 12px;
     cursor: pointer;
+}
+
+.items-purchased .items-products .product-card .card-bottom .discounted-price {
+    color: #FF6000;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.items-purchased .items-products .product-card .card-bottom .price {
+    color: #656565;
+}
+
+.items-purchased .items-products .product-card .card-bottom a {
+    transition: .3s;
+    font-weight: 500;
+}
+
+.items-purchased .items-products .product-card .card-bottom a:hover {
+    color: #FF6000;
+}
+
+.items-purchased .items-products .product-card .card-options {
+    overflow: hidden;
+    position: absolute;
+    top: 175px;
+    opacity: 0;
+    left: 0;
+    transition: .4s;
+}
+
+.items-purchased .items-products .product-card:hover .card-options {
+    top: 150px;
+    opacity: 1;
+}
+
+.items-purchased .items-products .product-card .img-1 {
+    display: block;
+}
+
+.items-purchased .items-products .product-card:hover .img-1 {
+    display: none;
+}
+
+.items-purchased .items-products .product-card .img-2 {
+    display: none;
+}
+
+.items-purchased .items-products .product-card:hover .img-2 {
+    display: block;
 }
