--- a/Venam/assets/css/login.css
+++ b/Venam/assets/css/login.css
@@ -1,12 +1,12 @@
-.my-account-header{
+.my-account-header {
     background-color: #F2F2F2;
 }
 
-.my-account-header h1{
+.my-account-header h1 {
     font-size: 35px;
 }
 
-.my-account-header .category-selection{
+.my-account-header .category-selection {
     background-color: #F2F2F2;
     border-radius: 30px;
     font-size: 14px;
@@ -16,63 +16,62 @@
     width: 20%;
 }
 
-.my-account-header .category-selection .category-selection-item{
+.my-account-header .category-selection .category-selection-item {
     cursor: pointer;
     transition: .3s;
 }
 
-.my-account-header .category-selection .category-selection-item a{
+.my-account-header .category-selection .category-selection-item a {
     transition: .3s;
     color: initial;
 }
 
-.my-account-header .category-selection .category-selection-item a:hover{
+.my-account-header .category-selection .category-selection-item a:hover {
     color: #FF6000;
 }
 
-.my-account-header .category-selection .category-selection-item-2{
+.my-account-header .category-selection .category-selection-item-2 {
     color: #FF6000;
 }
 
-.login label{
+.login label {
     font-size: 13px;
     padding: 10px 0;
 }
 
 .login input[type=text],
-.login input[type=password]
-{
+.login input[type=password] {
     padding: 8px 5px;
     margin-bottom: 19px;
 }
 
-.login span{
+.login span {
     color: #FF6000;
     font-weight: 500;
 }
 
-.login a{
+.login a {
     color: #0465D2;
     font-size: 14px;
 }
 
-.login button{
+.login button {
     background-color: #FF6000;
     color: white;
     transition: .3s;
     padding: 7px 23px;
 }
 
-.login button:hover{
+.login button:hover {
     background-color: #22252A;
     color: white;
 }
 
-.login p{
+.login p {
     color: #656565;
     font-size: 15px;
 }
 
-.login p a{
+.login p a {
     font-size: 15px;
 }
